# DiarioAcademico

./: .gitignore  CMakeLists.txt  READEME.md  README.md  main.cpp  test.cpp
model/: Attendance.cpp  Attendance.h  SchoolClass.cpp  SchoolClass.h  Student.cpp  Student.h
service/: README.md
template/: README.md
test/integration/: README.md
test/unit/: README.md
widget/studentclass/: CreateWidget.cpp  CreateWidget.h
